--- a/trabajo.De.Programacion/index.html
+++ b/trabajo.De.Programacion/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>activisimos en java s</title>
-    <script src="java.js"></script>
+    <title>Trabajo del sena</title>
+    <script src="Scripts.js"></script>
 </head>
 <body>
     
